Fix color contrast of H4
- Instead of white on light gray, make dark gray on light gray

--- a/public/css/screen.css
+++ b/public/css/screen.css
@@ -1141,7 +1141,7 @@ article h2,article h3,article h4,article h5,article h6 {
 }
 
 article h4 {
-	color: #fff;
+	color: #555555;
 }
 
 h5,h6 {
